--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
   "name": "nectarine",
   "version": "1.0.0",
-  "description": "Nectarine Static Site Generator",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "description": "a boilerplate static site",
+  "main": "run.js",
   "dependencies": {
-    "sinon": "^1.14.1",
-    "chai": "^2.3.0",
-    "sinon-chai": "^2.7.0"
+    "debug": "^2.2.0",
+    "glob": "^5.0.9",
+    "handlebars": "^3.0.3",
+    "metalsmith": "^1.7.0",
+    "metalsmith-collections": "^0.7.0",
+    "metalsmith-drafts": "^0.0.1",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-permalinks": "^0.4.0",
+    "metalsmith-templates": "^0.7.0",
+    "metalsmith-watch": "^1.0.1",
+    "moment": "^2.10.3"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
     "coffee-script": "^1.9.2",
-    "mocha": "^2.2.5",
-    "sinon": "^1.14.1",
-    "sinon-chai": "^2.7.0"
+    "gulp": "^3.8.11",
+    "gulp-webserver": "^0.9.1"
   },
   "scripts": {
-    "test": "mocha"
+    "start": "node ./node_modules/gulp/bin/gulp.js watch",
+    "test": "echo \"No tests needed\" && exit 0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/peterdemartini/nectarine.git"
+    "url": "https://github.com/peterdemartini/invincible-io.git"
   },
-  "keywords": [
-    "Static",
-    "Site",
-    "Generator"
-  ],
-  "author": "Peter DeMartini",
+  "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/peterdemartini/nectarine/issues"
+    "url": "https://github.com/peterdemartini/invincible-io/issues"
   },
-  "homepage": "https://github.com/peterdemartini/nectarine"
+  "homepage": "https://github.com/peterdemartini/invincible-io"
 }
